<?xml version="1.0"?>
<package format="2">
  <name>http_relay</name>
  <version>1.0.1</version>
  <description>Relay for HTTP messages (reverse proxy)</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
</package>
